--- a/public/styles/mainstyle.css
+++ b/public/styles/mainstyle.css
@@ -118,12 +118,13 @@
 .videoWrapper iframe{position:absolute;top:0;left:0;width:100%;height:100%}
 
 /*our products*/
-.ourProductsWrap{padding:80px 0 0;background:#333333;position:relative;border-radius:var(--border-home);margin-top:-100px;z-index:1;position: sticky;top: 80px;height: 100vh;overflow: hidden;}
+/* .ourProductsWrap{padding:80px 0 0;background:#333333;position:relative;border-radius:var(--border-home);margin-top:-100px;z-index:1;position: sticky;top: 80px;height: 100vh;overflow: hidden;} */
+.ourProductsWrap{padding:80px 0 0;background:#333333;position:relative;border-radius:var(--border-home);margin-top:-100px;z-index:1;overflow: hidden;position: relative;z-index: 1;}
 .ourProductsHead{display:flex;justify-content:space-between;padding-bottom:40px;align-items:flex-end}
 .ourProductsHeadLft .homeCmnSubHead,.ourProductsHeadLft .homeCmnHead{color:#fff}
 .ourProductsHeadRght .exploreMoreBtn{color:#fff;border-color:#fff}
 .ourProductsHeadRght .exploreMoreBtn:hover{background-color:#fff;color:#000}
-.ourProductsBody{position:relative}
+.ourProductsBody{position:relative;height: 85vh;}
 .ourProductsSliderNav{position:absolute;top:60px;right:100px;display:flex;gap:10px;z-index:10}
 .ourProductsSlierNavBtn{width:50px;height:50px;background-image:url(/images/home/circled-right-white.png);background-size:contain;background-repeat:no-repeat;cursor:pointer}
 .ourProductsSlierNavBtn.ourProductsSliderPrevBtn{rotate:180deg}
